--- a/coding/html/credentials-layout.html
+++ b/coding/html/credentials-layout.html
@@ -22,13 +22,13 @@
             <div class="header__mobile-nav">
               <div class="header__mobile-nav-wrapper">
                 <ul class="header__mobile-nav-list">
-                  <li class="header__mobile-nav-item"><a href="mypage">Home</a></li>
+                  <li class="header__mobile-nav-item"><a href="mypage.html">Home</a></li>
                   <li class="header__mobile-nav-item"><a href="office.html">Office</a></li>
                   <li class="header__mobile-nav-item"><a href="#">Past Boxes</a></li>
                   <li class="header__mobile-nav-item"><a href="#">Shop</a></li>
                   <li class="header__mobile-nav-item uppercase"><a href="#">Faq</a></li>
                   <li class="header__mobile-nav-item"><i class="icon-user"></i><a href="login.html">Login</a></li>
-                  <li class="header__mobile-nav-item"><i class="icon-cart"></i><a href="#">Cart</a></li>
+                  <li class="header__mobile-nav-item"><i class="icon-cart"></i><a href="cart.html">Cart</a></li>
                 </ul>
                 <div class="header__mobile-cta">
                   <button class="button w-full mb-[10px]">Give a gift</button>
@@ -57,7 +57,7 @@
                 </div>
                 <div class="header__inside">
                   <div class="header__center"><a href="login.html">Login<i class="icon-user icon-user--desktop"></i></a></div>
-                  <div class="header__center"><a href="#">Cart<i class="icon-cart icon-cart--desktop"></i></a></div>
+                  <div class="header__center"><a href="cart.html">Cart<i class="icon-cart icon-cart--desktop"></i></a></div>
                 </div>
               </div>
             </div>
