give a gift - and fixed text header  breadcrumbs

--- a/coding/html/plan.html
+++ b/coding/html/plan.html
@@ -69,94 +69,72 @@
         </div>
       </header>
       <section class="section">
-        <div class="banner">
-          <div class="banner__fill"><img class="banner__hero" src="../images/herobanner.png" alt="Banner treats"><img class="banner__mobile" src="../images/herobanner-mobile.png" alt="Mobile Banner Treats">
-            <div class="main-wrapper main-wrapper--banner">
-              <div class="banner__card animatedParent animateOnce">
-                <div class="banner__header animated bounceInRight">
-                  <h2>Snacks from <br>around the world</h2>
-                  <p>delivered to your door monthly</p>
+        <div class="breadcrumbs breadcrumbs--w-img"><img src="../images/giftboyy.png" alt="Delivery Boy">
+          <h2>Select Your Plan</h2>
+        </div>
+        <div class="gift">
+          <div class="main-wrapper main-wrapper--gift">
+            <div class="gift__wrapper">
+              <h2>Select A Size</h2>
+              <div class="gift__item-list">
+                <div class="gift__item">
+                  <div class="gift__item-wrapper">
+                    <div class="gift__img"><img src="../images/standardbox.png" alt="Treatbox Standard"></div>
+                    <div class="gift__details">
+                      <div class="gift__header">
+                        <h3>Standard Box</h3>
+                        <p>As low as $14.95 per box!</p>
+                      </div>
+                      <div class="gift__list">
+                        <div class="gift__row"><img src="../images/gift-icon1.png" alt="Cookies Icon">
+                          <p>5+ international snacks delivered each month</p>
+                        </div>
+                        <div class="gift__row"><img src="../images/gift-icon2.png" alt="Fruit Icon">
+                          <p>Try a new country every month</p>
+                        </div>
+                        <div class="gift__row"><img src="../images/gift-icon3.png" alt="Box Icon">
+                          <p>Receive your first box within a week of your order</p>
+                        </div>
+                        <div class="gift__row"><img src="../images/gift-icon4.png" alt="Earth Plane Travel Icon">
+                          <p>Shipping is free for addresses in the United States. Shipping fees will apply for addresses outside of the United States.</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <button class="button button--secondary w-full">Subscribe Box</button>
                 </div>
-                <div class="banner__cta animated bounceInLeft">
-                  <button class="button">Give A Gift</button>
-                  <button class="button button--secondary">Give Started</button>
+                <div class="gift__item">
+                  <p class="gift__best-value">Best Value!</p>
+                  <div class="gift__item-wrapper">
+                    <div class="gift__img"><img src="../images/premiumbox.png" alt="Treatbox Premium"></div>
+                    <div class="gift__details">
+                      <div class="gift__header">
+                        <h3>Standard Box</h3>
+                        <p>As low as $25.95 per box!</p>
+                      </div>
+                      <div class="gift__list">
+                        <div class="gift__row"><img src="../images/gift-icon1.png" alt="Cookies Icon">
+                          <p>10+ international snacks delivered each month</p>
+                        </div>
+                        <div class="gift__row"><img src="../images/gift-icon2.png" alt="Fruit Icon">
+                          <p>Try a new country every month</p>
+                        </div>
+                        <div class="gift__row"><img src="../images/gift-icon3.png" alt="Box Icon">
+                          <p>Receive your first box within a week of your order</p>
+                        </div>
+                        <div class="gift__row"><img src="../images/gift-icon4.png" alt="Earth Plane Travel Icon">
+                          <p>Shipping is free for addresses in the United States. Shipping fees will apply for addresses outside of the United States.</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <button class="button button--secondary w-full">Subscribe Box</button>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="featured">
-          <div class="main-wrapper">
-            <div class="featured__wrapper">
-              <div class="featured__card">
-                <h3 class="featured__header">As Featured In</h3>
-                <div class="featured__logo-wrapper">
-                  <ul class="featured__logos">
-                    <li class="featured__logo"><img src="../images/business-insider.png" alt="Business Insider"></li>
-                    <li class="featured__logo"><img src="../images/Travel_+_Leisure_Co.png" alt="Travel Leisure"></li>
-                    <li class="featured__logo"><img src="../images/New-York-Times-logo.png" alt="The New York Times"></li>
-                    <li class="featured__logo"><img src="../images/cnbc.png" alt="CNBC"></li>
-                    <li class="featured__logo"><img src="../images/thrillist-logo.png" alt="Thrillist"></li>
-                    <li class="featured__logo"><img src="../images/Popsugar_Logo.png" alt="Popsugar"></li>
-                    <li class="featured__logo"><img class="mx-auto" src="../images/TheArtofManlinessLogo.png" alt="Manliness"></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="inside-box">
-          <div class="main-wrapper">
-            <div class="inside-box__wrapper">
-              <h3 class="inside-box__header">Whats Inside The Box?</h3>
-              <div class="inside-box__card animatedParent animateOnce">
-                <div class="inside-box__video-wrapper animated fadeInLeftShort">
-                  <iframe class="inside-box__video" src="https://www.youtube.com/embed/9TXyzeJJa4Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                </div>
-                <div class="inside-box__list-wrapper animated fadeInRightShort">
-                  <div class="inside-box__list">
-                    <div class="inside-number">1.</div>
-                    <div class="inside-text">Hand-picked snacks from a different country delivered to you every month</div>
-                  </div>
-                  <div class="inside-box__list">
-                    <div class="inside-number">2.</div>
-                    <div class="inside-text">5+ snacks in the Standard Box<br>10+ snacks in the Premium Box</div>
-                  </div>
-                  <div class="inside-box__list">
-                    <div class="inside-number">3.</div>
-                    <div class="inside-text">Our boxes include cookies, crackers, chocolates, candies, chips and more!</div>
-                  </div>
-                  <div class="inside-box__bottom">
-                    <p>Sound Intriguing? Give it a try and order now!</p>
-                    <button class="button button--secondary">Treat Yourself</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="work">
-          <div class="main-wrapper">
-            <div class="work__card">
-              <h2 class="work__header">How it works?</h2>
-              <div class="work__list animatedParent animateOnce" data-sequence="400">
-                <div class="work__item animated fadeInRightShort" data-id="1"><img src="../images/howitworks.png" alt="checkout">
-                  <h3>Subscribe</h3>
-                  <p>As soon as we receive your order, we prepare your box of delicious international snacks to ship out the next business day!</p>
-                </div>
-                <div class="work__item animated fadeInRightShort" data-id="2"><img src="../images/deliver.png" alt="deliver">
-                  <h3>We Deliver</h3>
-                  <p>Your box will be picked up from our warehouse and delivered by your local post man</p>
-                </div>
-                <div class="work__item animated fadeInRightShort" data-id="3"><img src="../images/treatsbox.png" alt="Treat box">
-                  <h3>Get Snacks!</h3>
-                  <p>Open your box and commence on a delectable, culinary and cultural journey!</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="testimony">
+        <div class="testimony testimony--component">
           <div class="main-wrapper main-wrapper--testimony">
             <div class="testimony__card animatedParent animateOnce">
               <div class="testimony__header">
@@ -170,7 +148,7 @@
             </div>
           </div>
         </div>
-        <div class="testimony-social">
+        <div class="testimony-social testimony-social--component">
           <div class="main-wrapper">
             <div class="testimony-social__list animatedParent animateOnce" data-sequence="500">
               <div class="testimony-social__card animated fadeInLeftShort" data-id="1"><a class="testimony-social__link" href="#"><img src="../images/user-1.png" alt="Treat user"></a></div>
@@ -183,59 +161,6 @@
               <div class="testimony-social__card"><a class="testimony-social__link" href=""><img src="../images/user-2.png" alt="Treat user"></a></div>
               <div class="testimony-social__card"><a class="testimony-social__link" href=""><img src="../images/user-3.png" alt="Treat user"></a></div>
               <div class="testimony-social__card"><a class="testimony-social__link" href=""><img src="../images/user-4.png" alt="Treat user"></a></div>
-            </div>
-          </div>
-        </div>
-        <div class="explore">
-          <div class="main-wrapper">
-            <div class="explore__wrapper animatedParent animateOnce">
-              <div class="explore__card animated fadeInUp">
-                <div class="explore__header">
-                  <div class="explore__header-right">
-                    <h2>Explore Treats</h2>
-                    <p>Discover new treats every month!</p>
-                  </div>
-                  <div class="explore__header-left"><a href="#">See All<i class="icon-r-arrow"></i></a></div>
-                </div>
-                <div class="explore__list js-country">
-                  <div class="explore__item"><a href="#"> <img src="../images/asia.png" alt="asia"></a></div>
-                  <div class="explore__item"><a href="#"> <img src="../images/latin-america.png" alt="latin-america"></a></div>
-                  <div class="explore__item"><a href="#"> <img src="../images/australia.png" alt="australia"></a></div>
-                  <div class="explore__item"><a href="#"> <img src="../images/europe.png" alt="europe"></a></div>
-                  <div class="explore__item"><a href="#"> <img src="../images/europe.png" alt="europe"></a></div>
-                </div>
-                <div class="explore__bottom">
-                  <div class="explore__nav opacity-0"><span class="explore__pagination-dot explore__pagination-dot--active"></span><span class="explore__pagination-dot"></span><span class="explore__pagination-dot"></span><span class="explore__pagination-dot"></span><span class="explore__pagination-dot"></span></div><a class="expore__link" href="#">See All </a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="order">
-          <div class="main-wrapper main-wrapper--order">
-            <div class="order__wrapper animatedParent animateOnce">
-              <div class="order__header">
-                <h2>Order Your Box Now </h2>
-                <p>Free shipping in the US</p>
-              </div>
-              <div class="order__card">
-                <div class="order__img-wrapper animated fadeInLeftShort"><img class="order__img" src="../images/order-box.png" alt="Treat Box"></div>
-                <div class="order__box-list animated fadeInRightShort"><a class="order__box order__box--active" href="#">
-                    <div class="order__box-text">
-                      <h3>Standard Box</h3>
-                      <p>As low as $14.95 per box!</p>
-                    </div>
-                    <div class="order__box-link">Learn More<i class="icon-r-arrow-white"></i></div></a><a class="order__box" href="#">
-                    <div class="order__box-text">
-                      <h3>Premium Box</h3>
-                      <p>As low as $25.95 per box!</p>
-                    </div>
-                    <div class="order__box-link">Learn More<i class="icon-r-arrow-white"></i></div></a></div>
-              </div>
-              <div class="order__cta animated fadeInUp">
-                <button class="button">Give A Gift</button><span class="order__separator">Or</span>
-                <button class="button button--secondary">Get Started</button>
-              </div>
             </div>
           </div>
         </div>
