--- a/coding/html/layout.html
+++ b/coding/html/layout.html
@@ -36,12 +36,11 @@
                   <li class="header__mobile-nav-item"><i class="icon-user"></i><a href="login.html">Login</a></li>
                   <li class="header__mobile-nav-item"><i class="icon-cart"></i><a href="cart.html">Cart</a></li>
                 </ul>
-                <div class="header__mobile-cta">
-                  <button class="button w-full mb-[10px]">Give a gift</button>
-                  <button class="button button--secondary w-full">Get Started</button>
-                </div>
+                <div class="header__mobile-cta"><a href="gift.html">
+                    <button class="button w-full mb-[10px]">Give a gift</button></a><a href="plan.html">
+                    <button class="button button--secondary w-full">Get Started</button></a></div>
               </div>
-            </div><a href="#"><img class="header__mobile-logo" src="../images/logo.png" alt="Treats logo"></a><a href="#"><img class="header__mobile-user" src="../images/user.png" alt="User profile"></a>
+            </div><a href="mypage.html"><img class="header__mobile-logo" src="../images/logo.png" alt="Treats logo"></a><a href="#"><img class="header__mobile-user" src="../images/user.png" alt="User profile"></a>
           </div>
         </div>
         <div class="header__desktop">
@@ -57,10 +56,9 @@
                 </nav>
               </div>
               <div class="header__inside">
-                <div class="header__inside">
-                  <button class="button button--40 mr-5">Give a gift</button>
-                  <button class="button button--secondary button--40 mr-[41px]">Get Started</button>
-                </div>
+                <div class="header__inside"><a href="gift.html">
+                    <button class="button button--40 mr-5">Give a gift</button></a><a href="plan.html">
+                    <button class="button button--secondary button--40 mr-[41px]">Get Started</button></a></div>
                 <div class="header__inside">
                   <div class="header__center"><a href="login.html">Login<i class="icon-user icon-user--desktop"></i></a></div>
                   <div class="header__center"><a href="cart.html">Cart<i class="icon-cart icon-cart--desktop"></i></a></div>
@@ -109,7 +107,7 @@
               </div>
             </div>
             <div class="footer__copyright"><i class="fa-regular fa-copyright"></i>
-              <p>Treats 2022, All Rights Reserved</p>
+              <p>Treats 2023, All Rights Reserved</p>
             </div>
           </div>
         </div>
