--- a/coding/html/faq.html
+++ b/coding/html/faq.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/71a9bdfa63.js" crossorigin="anonymous"></script>
+    <script src="../js/jquery-v3.min.js"></script>
+    <script src="../js/slick.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&amp;family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/slick.min.css">
+    <link rel="stylesheet" href="../css/slick-theme.min.css">
+    <link rel="stylesheet" href="../css/animations-ie-fix.min.css">
+    <link rel="stylesheet" href="../css/animations.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <title>Treats</title>
   </head>
@@ -68,29 +74,93 @@
         </div>
       </header>
       <section class="section">
-        <div class="login">
-          <div class="login__wrapper">
-            <div class="login__card"><img class="login__logo" src="../images/logo.png" alt="Treats Logo">
-              <div class="login__text">
-                <h2>Account Login</h2>
-                <p>Welcome back! <br class="hide-desktop">Please login to your account.</p>
+        <div class="breadcrumbs">
+          <h2 class="uppercase">Faq</h2>
+          <ul class="breadcrumbs__list">
+            <li class="breadcrumbs__item">Home</li>
+            <li class="breadcrumbs__item uppercase">Faq</li>
+          </ul>
+        </div>
+        <div class="faq">
+          <div class="main-wrapper main-wrapper--faq">
+            <div class="faq__header">
+              <h2>Frequently Asked <br class="faq__separator">Questions</h2>
+              <p>What can we help you with?</p>
+            </div>
+            <div class="faq__search-wrapper"><i class="fas fa-search faq__icon-search"></i>
+              <input class="faq__input" id="js-search" type="search" placeholder="Type your question..">
+              <button class="faq__cta" type="button">Search</button>
+            </div>
+            <div class="faq__wrapper">
+              <div id="faq__box--treats">
+                <div class="faq__header">
+                  <h3>Treats Box</h3>
+                </div>
+                <ul id="js-faq__list"></ul>
               </div>
-              <form class="form mb-9" action="#">
-                <div class="input__wrapper">
-                  <input class="form__input" type="text" placeholder="Email Address">
+              <div id="faq__box--order">
+                <div class="faq__header">
+                  <h3>Orders</h3>
                 </div>
-                <div class="input__wrapper">
-                  <input class="form__input" type="password" placeholder="Password">
+              </div>
+              <div id="faq__box--shipping">
+                <div class="faq__header">
+                  <h3>Shipping</h3>
                 </div>
-                <div><a class="login__forgot" href="#">Forgot Password?</a></div>
-                <button class="button button--secondary w-full mt-[30px]">Login</button>
-              </form>
-              <p class="login__subscribe">Don't have an account? <a href="#">Subscribe </a>to create one</p>
+              </div>
             </div>
           </div>
         </div>
       </section>
+      <footer class="footer">
+        <div class="main-wrapper">
+          <div class="footer__contacts">
+            <div class="footer__card">
+              <h2 class="footer__header">Discover New Treats</h2>
+              <p class="footer__text">Sign up to the newsletter to receive promo codes and latest updates!</p>
+            </div>
+            <div class="footer__card">
+              <h4 class="footer__email">Signup Now</h4>
+              <div class="footer__wrapper">
+                <div class="footer__input-wrapper"><i class="icon-email"></i>
+                  <input class="w-full" type="text" placeholder="Input your email here">
+                </div>
+                <button class="button button--secondary w-full">Submit</button>
+              </div>
+            </div>
+          </div>
+          <div class="footer__socials">
+            <div class="footer__social-wrapper">
+              <div class="tablet:flex"><a href="#"><img class="footer__mobile-logo" src="../images/logo-white.png" alt="Treats Logo"></a>
+                <ul class="footer__links">
+                  <li class="footer__items"><a href="#">FAQ </a></li>
+                  <li class="footer__items"><a href="#">Terms </a></li>
+                  <li class="footer__items"><a href="#">Privacy </a></li>
+                  <li class="footer__items"><a href="#">Contact </a></li>
+                  <li class="footer__items"><a href="#">Sponsorship </a></li>
+                  <li class="footer__items"><a href="#">Music</a></li>
+                </ul>
+              </div>
+              <div>
+                <ul class="footer__links footer__links--socials">
+                  <li class="footer__items footer__items--socials"><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                  <li class="footer__items footer__items--socials"><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                  <li class="footer__items footer__items--socials"><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+                  <li class="footer__items footer__items--socials"><a href="#"><i class="fa-brands fa-pinterest"></i></a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="footer__copyright"><i class="fa-regular fa-copyright"></i>
+              <p>Treats 2023, All Rights Reserved</p>
+            </div>
+          </div>
+        </div>
+      </footer>
     </main>
   </body>
   <script src="../js/index.js"></script>
+  <script src="../js/carousel-list.js"></script>
+  <script src="../js/carousel.js"></script>
+  <script src="../js/css3-animate-it.js"></script>
+  <script src="../js/accordion.js"></script>
 </html>
