--- a/coding/html/layout.html
+++ b/coding/html/layout.html
@@ -31,8 +31,8 @@
                   <li class="header__mobile-nav-item"><a href="mypage.html">Home</a></li>
                   <li class="header__mobile-nav-item"><a href="office.html">Office</a></li>
                   <li class="header__mobile-nav-item"><a href="#">Past Boxes</a></li>
-                  <li class="header__mobile-nav-item"><a href="#">Shop</a></li>
-                  <li class="header__mobile-nav-item uppercase"><a href="#">Faq</a></li>
+                  <li class="header__mobile-nav-item"><a href="shop.html">Shop</a></li>
+                  <li class="header__mobile-nav-item uppercase"><a href="faq.html">FAQ</a></li>
                   <li class="header__mobile-nav-item"><i class="icon-user"></i><a href="login.html">Login</a></li>
                   <li class="header__mobile-nav-item"><i class="icon-cart"></i><a href="cart.html">Cart</a></li>
                 </ul>
@@ -40,7 +40,11 @@
                     <button class="button w-full mb-[10px]">Give a gift</button></a><a href="plan.html">
                     <button class="button button--secondary w-full">Get Started</button></a></div>
               </div>
-            </div><a href="mypage.html"><img class="header__mobile-logo" src="../images/logo.png" alt="Treats logo"></a><a href="#"><img class="header__mobile-user" src="../images/user.png" alt="User profile"></a>
+            </div><a href="mypage.html"><img class="header__mobile-logo" src="../images/logo.png" alt="Treats logo"></a>
+            <button class="js-user-toggle"><img class="header__mobile-user" src="../images/user.png" alt="User profile"></button>
+            <ul class="header__nav-list">
+              <li class="header__nav-item"><a class="header__nav-link" href="#">Logout </a></li>
+            </ul>
           </div>
         </div>
         <div class="header__desktop">
@@ -51,7 +55,8 @@
                   <ul class="nav__list">
                     <li class="nav__item"><a href="office.html">Office</a></li>
                     <li class="nav__item"><a href="#">Past Boxes</a></li>
-                    <li class="nav__item"><a href="#">FAQ</a></li>
+                    <li class="nav__item"><a href="shop.html">Shop</a></li>
+                    <li class="nav__item"><a href="faq.html">FAQ</a></li>
                   </ul>
                 </nav>
               </div>
@@ -117,5 +122,6 @@
   <script src="../js/index.js"></script>
   <script src="../js/carousel-list.js"></script>
   <script src="../js/carousel.js"></script>
-  <script src="../js/css3-animate-it.js"> </script>
+  <script src="../js/css3-animate-it.js"></script>
+  <script src="../js/accordion.js"></script>
 </html>
