--- a/coding/html/shop.html
+++ b/coding/html/shop.html
@@ -75,113 +75,82 @@
       </header>
       <section class="section">
         <div class="breadcrumbs">
-          <h2>Asia</h2>
+          <h2>The Treat Shop</h2>
           <ul class="breadcrumbs__list">
-            <li class="breadcrumbs__item text-xs">Home</li>
-            <li class="breadcrumbs__item text-xs">Explore Treats</li>
-            <li class="breadcrumbs__item text-xs">Treats From Asia</li>
+            <li class="breadcrumbs__item">Home</li>
+            <li class="breadcrumbs__item">Shop</li>
+            <li class="breadcrumbs__item">All</li>
           </ul>
         </div>
-        <div class="product">
+        <div class="shop">
           <div class="main-wrapper">
-            <ul class="product__list">
-              <li class="product__item"><a class="product__link" href="#">
-                  <div class="product__card">
-                    <p class="product__highlight">Philippines</p><img src="../images/products/driedMango.png" alt="Dried mango">
-                    <div class="product__header">
-                      <h3>Dried Mango</h3>
-                      <p>Philippines Brand</p>
-                    </div>
-                  </div></a></li>
-              <li class="product__item"><a class="product__link" href="#">
-                  <div class="product__card">
-                    <p class="product__highlight">Philippines</p><img src="../images/products/driedMango.png" alt="Dried mango">
-                    <div class="product__header">
-                      <h3>Dried Mango</h3>
-                      <p>Philippines Brand</p>
-                    </div>
-                  </div></a></li>
-              <li class="product__item"><a class="product__link" href="#">
-                  <div class="product__card">
-                    <p class="product__highlight">Philippines</p><img src="../images/products/driedMango.png" alt="Dried mango">
-                    <div class="product__header">
-                      <h3>Dried Mango</h3>
-                      <p>Philippines Brand</p>
-                    </div>
-                  </div></a></li>
-              <li class="product__item"><a class="product__link" href="#">
-                  <div class="product__card">
-                    <p class="product__highlight">Philippines</p><img src="../images/products/driedMango.png" alt="Dried mango">
-                    <div class="product__header">
-                      <h3>Dried Mango</h3>
-                      <p>Philippines Brand</p>
-                    </div>
-                  </div></a></li>
-              <li class="product__item"><a class="product__link" href="#">
-                  <div class="product__card">
-                    <p class="product__highlight">Philippines</p><img src="../images/products/driedMango.png" alt="Dried mango">
-                    <div class="product__header">
-                      <h3>Dried Mango</h3>
-                      <p>Philippines Brand</p>
-                    </div>
-                  </div></a></li>
-              <li class="product__item"><a class="product__link" href="#">
-                  <div class="product__card">
-                    <p class="product__highlight">Philippines</p><img src="../images/products/driedMango.png" alt="Dried mango">
-                    <div class="product__header">
-                      <h3>Dried Mango</h3>
-                      <p>Philippines Brand</p>
-                    </div>
-                  </div></a></li>
-              <li class="product__item"><a class="product__link" href="#">
-                  <div class="product__card">
-                    <p class="product__highlight">Philippines</p><img src="../images/products/driedMango.png" alt="Dried mango">
-                    <div class="product__header">
-                      <h3>Dried Mango</h3>
-                      <p>Philippines Brand</p>
-                    </div>
-                  </div></a></li>
-              <li class="product__item"><a class="product__link" href="#">
-                  <div class="product__card">
-                    <p class="product__highlight">Philippines</p><img src="../images/products/driedMango.png" alt="Dried mango">
-                    <div class="product__header">
-                      <h3>Dried Mango</h3>
-                      <p>Philippines Brand</p>
-                    </div>
-                  </div></a></li>
-              <li class="product__item"><a class="product__link" href="#">
-                  <div class="product__card">
-                    <p class="product__highlight">Philippines</p><img src="../images/products/driedMango.png" alt="Dried mango">
-                    <div class="product__header">
-                      <h3>Dried Mango</h3>
-                      <p>Philippines Brand</p>
-                    </div>
-                  </div></a></li>
-              <li class="product__item"><a class="product__link" href="#">
-                  <div class="product__card">
-                    <p class="product__highlight">Philippines</p><img src="../images/products/driedMango.png" alt="Dried mango">
-                    <div class="product__header">
-                      <h3>Dried Mango</h3>
-                      <p>Philippines Brand</p>
-                    </div>
-                  </div></a></li>
-              <li class="product__item"><a class="product__link" href="#">
-                  <div class="product__card">
-                    <p class="product__highlight">Philippines</p><img src="../images/products/driedMango.png" alt="Dried mango">
-                    <div class="product__header">
-                      <h3>Dried Mango</h3>
-                      <p>Philippines Brand</p>
-                    </div>
-                  </div></a></li>
-              <li class="product__item"><a class="product__link" href="#">
-                  <div class="product__card">
-                    <p class="product__highlight">Philippines</p><img src="../images/products/driedMango.png" alt="Dried mango">
-                    <div class="product__header">
-                      <h3>Dried Mango</h3>
-                      <p>Philippines Brand</p>
-                    </div>
-                  </div></a></li>
-            </ul>
+            <div class="shop__box">
+              <div class="shop__search-wrapper"><i class="fas fa-search shop__icon-search"></i>
+                <input class="shop__input" id="js-search" type="search" placeholder="Search Snacks">
+                <button class="shop__cta" type="button">Search</button>
+              </div>
+              <div class="shop__search-sorting">
+                <p>Showing 11 of 11 snacks</p>
+                <p>Sort By</p>
+                <p>Newest</p>
+              </div>
+            </div>
+            <div class="shop__wrapper">
+              <div class="shop__item"><a class="shop__add-cart" href="#"><img src="../images/shop-cart.png" alt="Add cart from SHop"></a>
+                <div class="shop__link">
+                  <div class="shop__img-wrapper"><img src="../images/products/driedMango.png" alt="Dried Mango"></div>
+                  <div class="shop__details">
+                    <p class="shop__name">Custard Cake<br>By Lotte (Korea)</p>
+                    <p class="shop__price">$1.99</p>
+                  </div>
+                </div>
+              </div>
+              <div class="shop__item"><a class="shop__add-cart" href="#"><img src="../images/shop-cart.png" alt="Add cart from SHop"></a>
+                <div class="shop__link">
+                  <div class="shop__img-wrapper"><img src="../images/products/driedMango.png" alt="Dried Mango"></div>
+                  <div class="shop__details">
+                    <p class="shop__name">Custard Cake<br>By Lotte (Korea)</p>
+                    <p class="shop__price">$1.99</p>
+                  </div>
+                </div>
+              </div>
+              <div class="shop__item"><a class="shop__add-cart" href="#"><img src="../images/shop-cart.png" alt="Add cart from SHop"></a>
+                <div class="shop__link">
+                  <div class="shop__img-wrapper"><img src="../images/products/driedMango.png" alt="Dried Mango"></div>
+                  <div class="shop__details">
+                    <p class="shop__name">Custard Cake<br>By Lotte (Korea)</p>
+                    <p class="shop__price">$1.99</p>
+                  </div>
+                </div>
+              </div>
+              <div class="shop__item"><a class="shop__add-cart" href="#"><img src="../images/shop-cart.png" alt="Add cart from SHop"></a>
+                <div class="shop__link">
+                  <div class="shop__img-wrapper"><img src="../images/products/driedMango.png" alt="Dried Mango"></div>
+                  <div class="shop__details">
+                    <p class="shop__name">Custard Cake<br>By Lotte (Korea)</p>
+                    <p class="shop__price">$1.99</p>
+                  </div>
+                </div>
+              </div>
+              <div class="shop__item"><a class="shop__add-cart" href="#"><img src="../images/shop-cart.png" alt="Add cart from SHop"></a>
+                <div class="shop__link">
+                  <div class="shop__img-wrapper"><img src="../images/products/driedMango.png" alt="Dried Mango"></div>
+                  <div class="shop__details">
+                    <p class="shop__name">Custard Cake<br>By Lotte (Korea)</p>
+                    <p class="shop__price">$1.99</p>
+                  </div>
+                </div>
+              </div>
+              <div class="shop__item"><a class="shop__add-cart" href="#"><img src="../images/shop-cart.png" alt="Add cart from SHop"></a>
+                <div class="shop__link">
+                  <div class="shop__img-wrapper"><img src="../images/products/driedMango.png" alt="Dried Mango"></div>
+                  <div class="shop__details">
+                    <p class="shop__name">Custard Cake<br>By Lotte (Korea)</p>
+                    <p class="shop__price">$1.99</p>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
